--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
-﻿<!DOCTYPE html>
-<html>
-<body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+﻿<HTML>
+<style>
+#Link{
+  text-align:center;
+  font-size:33px;
+}
+</style>  
+<BODY background="pic.jpg">     
+<h1 style="text-align:center;font-size:100px">YuanYao</h1>
+<div id="Link">
+<p>
+<a href="https://hguftuftglk.github.io/individual resume.html">
+    individual resume
+</a>
+<br>
+<a href="https://hguftuftglk.github.io/family status.html">
+    family status
+</a>
+<br>
+<a href="https://hguftuftglk.github.io/    hobbies and interests
+.html">
+    hobbies and interests
+</a>
+<br>
+<a href="https://hguftuftglk.github.io/scenic.html">
+    scenic
+</a>
+</p>    
+</div>
+</BODY>
+</HTML>
