--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     family status
 </a>
 <br>
-<a href="https://hguftuftglk.github.io/    hobbies and interests
+<a href="https://hguftuftglk.github.io/hobbies
+and interests
 .html">
     hobbies and interests
 </a>
