--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 </a>
 <br>
 <a href="https://hguftuftglk.github.io/hobbies
-and interests
-.html">
+and interests.html">
     hobbies and interests
 </a>
 <br>
