--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     family status
 </a>
 <br>
-<a href="https://hguftuftglk.github.io/hobbies
-and interests.html">
+<a href="https://hguftuftglk.github.io/hobbies and interests.html">
     hobbies and interests
 </a>
 <br>
