Update hobbies and interests.html

--- a/hobbies and interests.html
+++ b/hobbies and interests.html
@@ -18,7 +18,7 @@
     <hr>
     <p align="center">
         ·
-        <a href="https://hguftuftglk.github.io/HTML">
+        <a href="https://hguftuftglk.github.io">
           home.
         </a>
     </p>
@@ -38,7 +38,7 @@
         <hr>
         <p align="center">
             ·
-            <a href="https://hguftuftglk.github.io/PHP">
+            <a href="https://hguftuftglk.github.io">
                 home.
             </a>
         </p>
