--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 <a href="https://hguftuftglk.github.io/scenic.html">
     scenic
 </a>
+<br>
+<a href="https://hguftuftglk.github.io/homework05.html">
+    homework05
+</a>
 </p>    
 </div>
 </BODY>
