--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <h1 style="text-align:center;font-size:100px">YuanYao</h1>
 <div id="Link">
 <p>
-<a href="https://hguftuftglk.github.io/individual resume.html">
-    individual resume
+<a href="https://hguftuftglk.github.io/homework01.html">
+    homework01
 </a>
 <br>
-<a href="https://hguftuftglk.github.io/family status.html">
-    family status
+<a href="https://hguftuftglk.github.io/homework02.html">
+    homework02
 </a>
 <br>
-<a href="https://hguftuftglk.github.io/hobbies and interests.html">
-    hobbies and interests
+<a href="https://hguftuftglk.github.io/homework03.html">
+    homework03
 </a>
 <br>
-<a href="https://hguftuftglk.github.io/scenic.html">
-    scenic
+<a href="https://hguftuftglk.github.io/homework04.html">
+    homework04
 </a>
 <br>
 <a href="https://hguftuftglk.github.io/homework05.html">
