--- a/homework02.html
+++ b/homework02.html
@@ -4,37 +4,38 @@
 <title>homework02</title>
 </head>
 
-<body>
-    <h1 align="center" >
+<body background="pic.jpg">
+    
+    <h1 align="center" style="color:gray;">
         homework02
     </h1>
     <table width="40%" border="1" cellspacing="0" align="center" >
-        <tr bgcolor=red style="color:WHITE";>
+        <tr bgcolor=gray style="color:WHITE";>
             <th>Dad</th>
             <th>Mom </th>
             <th>Grandmom </th>
             <th>Me </th>
         </tr>
-        <tr align="center">
+        <tr align="center" style="color:white;">
             <td>YuanLinFeng</td>
             <td>LuXiuHua</td>
             <td>XiangYuanZhen</td>
             <td>YuanYao</td>
         </tr>
-        <tr align="center">
+        <tr align="center" style="color:white;">
             <td>43</td>
             <td>41</td>
             <td>72</td>
             <td>20</td>
           </tr>
-        <tr align="center">
+        <tr align="center" style="color:white;">
             <td>Male</td>
             <td>Female</td>
             <td>Female</td>
             <td>Female</td>
         </tr>
     </table>
-    <hr>
+   
     <p>
         &nbsp; &nbsp; &nbsp; ·
         <a href="https://hguftuftglk.github.io">
