--- a/homework03.html
+++ b/homework03.html
@@ -4,30 +4,42 @@
 <title>homework03</title>
 </head >
  
-<body>
+<body background="pic.jpg">
     <div  style="width:100%">
     <div style="width:45%;float:left;">
-    <h1 align="center">hobbies</h1>
-    <p> 
+    <h1 align="center" style="color:gray;">hobbies</h1>
+    <p style="color:white;"> 
         My favourite habby is dancing.I started to learn dancing when I was five.At first,i thought it's too hard and it's to tired.So sometimes I went to the dancing room but sometimes I didn't. 
 
         <br>After a long time,I love dancing because I felt dancing is beautiful.My mother said:“baiThat's good.”duWhen I start to went to school I joined many competitions zhidao.And I also got many
     
     </p>
+        <p>
+        &nbsp; &nbsp; &nbsp; ·
+        <a href="https://hguftuftglk.github.io">
+            home.
+        </a>
+    </p>
    
     </div>
 
     <div style="width:45%;float:left;">
-        <h1 align="center">interests</h1>
-        <p> 
+        <h1 align="center" style="color:gray;">interests</h1>
+        <p style="color:white;"> 
            My hobby is listening to music
         </p>
-        <p>     
+        <p style="color:white;">     
             I like listening to music best.Because listening to music makes me relaxed.When I am tired,I will listen to some quiet music which makes me fall asleep very quickly.My favorite music is the music that has good lyrics.Good lyrics can also make me learn Chinese or English well.We can't live without music.
         </p>
-        <p>     
+        <p style="color:white;">     
             I love listening to music.I will keep this hobby forever.
         </p>
+        <p>
+        &nbsp; &nbsp; &nbsp; ·
+        <a href="https://hguftuftglk.github.io">
+            home.
+        </a>
+    </p>
         
         </div>
     </div>
