--- a/homework04.html
+++ b/homework04.html
@@ -3,15 +3,18 @@
 <meta charset="utf-8">
 <title>homework04</title>
 </head >
-<body >
-<h1 style="text-align:center">homework04</h1>
-    
-<p style="font-size:20px;color:#000000;">
-<img src="SH.JPG" align="middle" width="250" height="130"/>
+<body background="pic.jpg">
+<h1 align="center" style="color:gray;">
+        homework04
+    </h1>
+<p style="font-size:20px;color:white;">
+<img src="SH.JPG" align="middle" width="500" height="260"/>
+ <p style="color:white;">   
 The Oriental Pearl Radio  Television Tower is a TV tower in Shanghai. Its location at the tip of Lujiazui in the Pudong New Area by the side of Huangpu River, opposite The Bund, makes it a distinct landmark in the area. Its principal designers were Jiang Huan Chen, Lin Benlin, and Zhang Xiulin. Construction began in 1991, and the tower was completed in 1994.
+     </p> 
 <pr>
 </pr>    
-<hr>
+
         <p align="center">
             ·
             <a href="https://hguftuftglk.github.io">
