--- a/homework04.html
+++ b/homework04.html
@@ -4,7 +4,7 @@
 <title>homework04</title>
 </head >
 <body background="pic.jpg">
-<h1 align="center" style="color:gray;">
+<h1 align="center" style="color:lightgray;">
         homework04
     </h1>
 <p style="font-size:20px;color:white;">
