--- a/index.html
+++ b/index.html
@@ -1,34 +1,61 @@
-﻿<HTML>
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>YuanYao</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-#Link{
-  text-align:center;
-  font-size:33px;
+* {
+  box-sizing: border-box;
 }
-</style>  
-<BODY background="pic.jpg">     
-<h1 style="text-align:center;font-size:100px">YuanYao</h1>
-<div id="Link">
-<p>
-<a href="https://hguftuftglk.github.io/homework01.html">
-    homework01
-</a>
-<br>
-<a href="https://hguftuftglk.github.io/homework02.html">
-    homework02
-</a>
-<br>
-<a href="https://hguftuftglk.github.io/homework03.html">
-    homework03
-</a>
-<br>
-<a href="https://hguftuftglk.github.io/homework04.html">
-    homework04
-</a>
-<br>
-<a href="https://hguftuftglk.github.io/homework05.html">
-    homework05
-</a>
-</p>    
+
+body {
+  margin: 0;
+}
+
+/* Style the header */
+.YuanYao {
+  background-color: #f1f1f1;
+  padding: 20px;
+  text-align: center;
+}
+
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+</style>
+</head>
+<body background="picture.jpg">
+
+<div class="YuanYao">
+  <h1>YuanYao</h1>
 </div>
-</BODY>
-</HTML>
+
+<div class="topnav">
+  <a href="https://hguftuftglk.github.io/homework01.html">homework01</a>
+  <a href="https://hguftuftglk.github.io/homework02.html">homework02</a>
+  <a href="https://hguftuftglk.github.io/homework03.html">homework03</a>
+  <a href="https://hguftuftglk.github.io/homework04.html">homework04</a>
+  <a href="https://hguftuftglk.github.io/homework05.html">homework05</a>
+</div>
+
+</body>
+</html>
