--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
 }
 </style>
 </head>
-<body background="picture.jpg">
+<body background="photo.jpg">
 
 <div class="YuanYao">
   <h1>YuanYao</h1>
